--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
-<body>
-    <h1>
-        HERE IS PAGE 1
-    </h1>
-    <a href="page2">Link to File 2</a>
+<body class=page1background>
+    <div >
+        <h1>
+            HERE IS PAGE 1
+        </h1>
+        <a href="page2">Link to File 2</a>
+    </div>
 </body>
 </html>
