--- a/public/page2.html
+++ b/public/page2.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
-<body>
+<body class="page2background">
     <h1>
         HERE IS PAGE 2
     </h1>
